:wrench: fix spacing issue on home page

--- a/wp-content/themes/eyebeam2018/style.css
+++ b/wp-content/themes/eyebeam2018/style.css
@@ -859,6 +859,7 @@ footer .tagline {
 }
 
 .module {
+	display: block;
 	margin-left: 10px;
 	border-left: 2px solid #000;
 	border-top: 2px solid #000;
